--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 .played {
-    color: red;
-    text-decoration: line-through;
+  color: red;
+  text-decoration: line-through;
+}
+
+.container {
+  width: 100%;
+  margin: 0 auto;
 }
